--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,125 @@ body {
    transform: translateY(14px) scale(1.1);
    z-index: -1;
  }
+ /*hide social media to show them in navbar for cell device*/
+ .social-logos {
+  display: none;
+}
+/*navbar style for cell device*/
+.navbar-cell {
+  position: absolute;
+  height: 60px;
+  z-index: 1;
+  background-color: #fff;
+  top: 0;
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
+  display: flex;
+  float: left;
+}
+/*style for items in navbar for cellphone devices*/
+.initial-logo-space {
+  width: 8%;
+}
+.logo-space {
+  width: 4%;
+}
+.bar-menu-space {
+  width: 40%;
+}
+.instagram-logo-cell {
+  margin-top: 10px;
+  cursor: pointer;
+  background-image: url('./img/instagram.png');
+  overflow: visible;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 42px;
+  font-size: 0;
+}
+.instagram-logo-cell:focus, .instagram-logo-cell:hover {
+  outline: none;
+  background-size: 45px;
+  transition: 0.06s;
+  box-shadow: 0 2px 4px rgba(0, 0, 1, .2);
+}
+.facebook-logo-cell {
+  margin-top: 10px;
+  cursor: pointer;
+  background-image: url('./img/facebook.png');
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px;
+  font-size: 0;
+}
+.facebook-logo-cell:focus, .facebook-logo-cell:hover {
+  outline: none;
+  background-size: 45px;
+  transition: 0.06s;
+  box-shadow: 0 2px 4px rgba(0, 0, 1, .2);
+}
+.twitter-logo-cell {
+  margin-top: 10px;
+  cursor: pointer;
+  background-image: url('./img/twitter.png');
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px;
+  font-size: 0;
+}
+.twitter-logo-cell:focus, .twitter-logo-cell:hover {
+  outline: none;
+  background-size: 45px;
+  transition: 0.06s;
+  box-shadow: 0 2px 4px rgba(0, 0, 1, .2);
+}
+.pinterest-logo-cell {
+  cursor: pointer;
+  margin-top: 10px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-image: url('./img/pinterest.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px;
+  font-size: 0;
+}
+.pinterest-logo-cell:focus, .pinterest-logo-cell:hover {
+  outline: none;
+  background-size: 45px;
+  transition: 0.06s;
+  box-shadow: 0 2px 4px rgba(0, 0, 1, .2);
+}
+/*burger menu button*/
+.bar-menu-container {
+  padding-right: 20px;
+  cursor: pointer;
+  display: inline-block;
+  padding-left: 25px;
+  padding-top: 13px;
+}
+.bar-menu-container:focus, .bar-menu-container:hover {
+  outline: none;
+  transition: 0.06s;
+  box-shadow: 0 2px 4px rgba(0, 0, 1, .3);
+}
+.bar1, .bar2, .bar3 {
+    position: initial;
+    width: 30px;
+    height: 3px;
+    background-color: #ccc;
+    margin: 6px 0;
+    transition: 0.4s;
+}
