--- a/src/App.css
+++ b/src/App.css
@@ -648,4 +648,13 @@ p {
   .pinterest-logo {
     background-image: url('./img/pinterest.png');
   }
+  /*camera logo image*/
+  .camera-logo {
+    margin-top: 350px;
+    margin-left: calc((100% - 300px)* 0.5);
+  }
+  .caption-top {
+  top: 450px;
+}
+
 }
