--- a/src/App.css
+++ b/src/App.css
@@ -249,6 +249,35 @@ body {
   background-color: #ddd;
   color: black;
 }
+/*go to top arrow extension for cellphone*/
+.to-top-ext {
+  padding-right: 25px;
+  z-index: 1;
+  position: fixed;
+  display: block;
+  margin-top: 415px;
+  width: 97%;
+  transition: 0.9s;
+}
+.to-top-img {
+  float: right;
+  background-color: #b0b0b0;
+  cursor: pointer;
+  margin-top: 0px;
+  display: block;
+  width: 0px;
+  height: 0px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 0px;
+  font-size: 0;
+  background-image: url('./img/arrow-up.png');
+  transition: 0.6s;
+}
+.to-top-img:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 1, .3);
+}
 /*style for 1rst bg view on the main page*/
 .caption-top {
      position: absolute;
@@ -878,6 +907,9 @@ p {
   }
   .pinterest-logo {
     background-image: url('./img/pinterest.png');
+  }
+  .to-top-ext {
+    display: none;
   }
   /*camera logo image*/
   .camera-logo {
