Add button style to show all session in desktop devices

--- a/src/App.css
+++ b/src/App.css
@@ -635,10 +635,121 @@ p {
   float: left;
   margin-left: 20px;
 }
+/*button style to display all sessions on cell devices*/
+.show-session {
+  margin-top: 865px;
+  margin-left: calc((100% - 170px) * 0.5);
+  position: absolute;
+  overflow: hidden;
+  transition: 0.2s;
+}
+.show-session-item {
+  transform: rotate(180deg);
+  margin-left: 55px;
+  background-color: #484848;
+  cursor: pointer;
+  margin-top: 0px;
+  display: block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 25px;
+  font-size: 0;
+  background-image: url('./img/arrow-up.png');
+}
+.show-session-item:hover {
+  background-color: #b0b0b0;
+  background-size: 30px;
+  transition: 0.4s;
+}
+@media screen and (max-height:888px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 855px;
+  }
+}
+@media screen and (max-height:800px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 825px;
+  }
+}
+@media screen and (max-height:750px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 805px;
+  }
+}
+@media screen and (max-height:700px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 780px;
+  }
+}
+@media screen and (max-height:650px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 760px;
+  }
+}
+@media screen and (max-height:600px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 740px;
+  }
+}
+@media screen and (max-height:550px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 720px;
+  }
+}
+@media screen and (max-height:500px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 700px;
+  }
+}
+@media screen and (max-height:450px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 680px;
+  }
+}
+@media screen and (max-height:400px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 660px;
+  }
+}
+@media screen and (max-height:350px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 640px;
+  }
+}
+@media screen and (max-height:300px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 620px;
+  }
+}
+@media screen and (max-height:250px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 600px;
+  }
+}
+@media screen and (max-height:200px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 580px;
+  }
+}
+@media screen and (max-height:150px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 560px;
+  }
+}
+@media screen and (max-height:100px) and (max-width: 800px) {
+  .show-session {
+    margin-top: 540px;
+  }
+}
+/*photos session cards*/
  .bookonline-field {
    padding-top: 25px;
  }
  .bookonline-session {
+   position: relative;
    padding: 0;
    border: none;
    background: #fff;
@@ -1013,6 +1124,33 @@ p {
   display: flex;
   padding-left: 10px;
   padding-right: 0px;
+}
+.show-session {
+  margin-top: 30vh;
+  margin-left: calc((100% - 170px) * 0.5);
+  position: absolute;
+  overflow: hidden;
+}
+.show-session-item {
+  transform: rotate(90deg);
+  margin-left: 55px;
+  background-color: #484848;
+  cursor: pointer;
+  margin-top: 0px;
+  display: block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  font-size: 0;
+  background-image: url('./img/arrow-up.png');
+}
+.show-session-item:hover {
+  background-color: #b0b0b0;
+  background-size: 30px;
+  transition: 0.4s;
 }
 .set-appointment {
   padding: 15px;
