--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@ body {
   font: 400 15px/1.8 "Lato", sans-serif;
   color: #777;
 }
+.content {
+  overflow: hidden;
+}
 /*appear animation for pages*/
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -47,6 +50,10 @@ body {
   -moz-animation-delay: 0.6s;
   animation-delay: 0.6s;
 }
+/*hide nav bar with style on cell devices*/
+.navbar-desktop {
+  display: none;
+}
 /*background images style*/
 .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
     position: relative;
@@ -61,15 +68,17 @@ body {
    background-color: #0095b6;
    min-height: 100vh;
    transform-style: inherit;
-   transform: translateY(-120px) scale(1.3);
+   transform: translateY(-35px) scale(1.1);
    z-index: -1;
+   width: 95%;
  }
  .bgimg-4 {
    background-image: url('./img/last-bg-img.jpg');
    min-height: 100vh;
    transform-style: inherit;
-   transform: translateY(14px) scale(1.1);
+   transform: translateY(-5px) scale(1.1);
    z-index: -1;
+   width: 95%;
  }
  /*hide social media to show them in navbar for cell device*/
  .social-logos {
@@ -256,7 +265,7 @@ body {
   position: fixed;
   display: block;
   margin-top: 415px;
-  width: 97%;
+  width: 95%;
   transition: 0.9s;
 }
 .to-top-img {
@@ -280,11 +289,12 @@ body {
 }
 /*style for 1rst bg view on the main page*/
 .caption-top {
-     position: absolute;
-     left: 0;
-     top: 48%;
-     width: 100%;
-     text-align: center;
+  transform: scale(1.2);
+  position: absolute;
+  left: 0;
+  top: 38%;
+  width: 100%;
+  text-align: center;
  }
  .logo-container {
    z-index: 1;
@@ -294,7 +304,7 @@ body {
  .camera-logo {
    margin-left: calc((100% - 100px) * 0.5);
    transform: rotate(-30deg);
-   margin-top: 310px;
+   margin-top: -100px;
    width: 150px;
    height: 150px;
    position: absolute;
@@ -336,7 +346,7 @@ body {
  text-decoration: none;
 }
 .start-button:hover {
- font-size: 13px;
+ transform: scale(1.1);
  outline: none;
  box-shadow: 0 2px 4px rgba(0, 0, 0, .3);
  cursor: pointer;
@@ -415,7 +425,7 @@ p {
 .caption {
     position: absolute;
     left: 0;
-    top: 40%;
+    top: 20%;
     width: 100%;
     text-align: center;
     color: #000;
@@ -530,12 +540,15 @@ p {
    background-image: url('./img/msg-section-img.jpg');
    min-height: 50vh;
  }
+ #message-form {
+   margin-left: 8px;
+ }
  .input-form {
    width: 100%;
    margin-top: 60px;
  }
  .input-field {
-   margin-top: 20px;
+   margin-top: 22px;
  }
  .input-user {
    width: 98%;
@@ -881,7 +894,7 @@ p {
 /*footer style for cellphone devices*/
 .footer {
   background-color: #36393d;
-  margin-top: 130px;
+  margin-top: 120px;
   text-align: center;
 }
 .footer-line {
@@ -980,7 +993,7 @@ p {
     z-index: 1;
     position: fixed;
     display: block;
-    margin-top: 250px;
+    margin-top: 20%;
     width: 80px;
   }
   .instagram-logo:hover, .facebook-logo:hover, .twitter-logo:hover, .pinterest-logo:hover {
@@ -1024,11 +1037,11 @@ p {
   }
   /*camera logo image*/
   .camera-logo {
-    margin-top: 350px;
+    margin-top: -100px;
     margin-left: calc((100% - 300px)* 0.5);
   }
   .caption-top {
-  top: 450px;
+  top: 45%;
 }
 /*style for personal info*/
 .personal-info {
